<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Newton Creek</string>
    <string name="hello_world">hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcomestring">blah blah</string>
    <string name="btn1Text"> ∅ </string>
    <string name="btn2Text"> ⇿ </string>

    <string name="btn3Text">R</string>

    <string name="btn4Text">G</string>

    <string name="btn5Text">O</string>

    <string name="btn6Text">P</string>

    <string name="btn7Text">B</string>
<!-- todo: unicode arrows above were  at http://unicode-table.com/en/sets/arrows-symbols/ and http://xahlee.info/comp/unicode_arrows.html -->


</resources>
