<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AndroidSampleActivity"
    android:background="#DDD">
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomestring"
        android:id="@+id/statusBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#80FFFFFF"
        />
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/btn1Text"
        android:id="@+id/btn1"
        android:onClick="onResetBtnClick"
        android:layout_marginTop="26dp"
        android:background="#aaFFFFFF"
        android:layout_below="@+id/statusBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="12dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/btn2Text"
        android:id="@+id/btn2"
        android:onClick="onResumeBtnClick"
        android:background="#aaFFFFFF"
        android:layout_below="@+id/btn1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/btn3Text"
        android:textColor="#ffCC0000"
        android:id="@+id/btn3"
        android:onClick="onToggleRedPathBtnClick"
        android:background="#aaFFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/btn4Text"
        android:textColor="#ff669900"
        android:id="@+id/btn4"
        android:onClick="onToggleGreenPathBtnClick"
        android:background="#aaFFFFFF"
        android:layout_alignTop="@+id/btn3"
        android:layout_toRightOf="@+id/btn3"
        android:layout_toEndOf="@+id/btn3"
        android:layout_marginLeft="12dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/btn5Text"
        android:textColor="#ff0099CC"
        android:id="@+id/btn5"
        android:onClick="onToggleBluePathBtnClick"
        android:background="#aaFFFFFF"
        android:layout_toEndOf="@+id/btn4"
        android:layout_alignTop="@+id/btn4"
        android:layout_toRightOf="@+id/btn4"
        android:layout_marginLeft="12dp" />

</RelativeLayout>
